--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,9 +7,14 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@types/source-map": "^0.5.2",
     "axios": "^1.3.6",
+    "bootstrap": "^5.2.3",
+    "css-minimizer-webpack-plugin": "^5.0.0",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.7.4",
     "react-dom": "^18.2.0",
+    "react-router-bootstrap": "^0.26.2",
     "react-router-dom": "^6.10.0",
     "react-scripts": "^5.0.1",
     "use-reducer-logger": "^1.0.2",
@@ -38,5 +43,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "source-map": "^0.7.4"
   }
 }
